# screen-scout

./: .flake8  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
migrations/: env.py
migrations/versions/: 13c0d0298981_initial_tables.py  2024-07-31_f41e60ec5f3a.py  2024-08-03_3e2eb3390afc.py  6e88568bf20d_initial_tables.py  82b05509368e_initial_tables.py  93b261e161f7_initial_tables.py  cf1668f5f8df_initial_tables.py  f995f0296fbd_initial_tables.py
screenscout/: api.py  config.py  enums.py  exceptions.py  main.py  models.py  security.py
screenscout/api/: deps.py  endpoints.py
screenscout/auth/: enums.py  models.py  permissions.py  service.py  views.py
screenscout/career_role/: models.py  service.py  views.py
screenscout/core/: config.py  db.py  security.py
screenscout/country/: models.py  service.py  views.py
screenscout/crud/: career_role.py  country.py  genre.py  language.py  movie.py  person.py  series.py  user.py
screenscout/database/: core.py
screenscout/genre/: models.py  service.py  views.py
screenscout/jwt/: models.py
screenscout/language/: models.py  service.py  views.py
screenscout/models/: career_role.py  country.py  genre.py  language.py  movie.py  person.py  series.py  user.py
screenscout/movie/: models.py  service.py  views.py
screenscout/movie_list/: models.py  service.py  views.py
screenscout/person/: models.py  service.py  views.py
screenscout/schemas/: career_role.py  country.py  genre.py  language.py  movie.py  person.py  series.py  user.py
screenscout/series/: models.py  service.py  views.py
screenscout/series_list/: models.py  service.py  views.py
(+13 files in other folders)
